[package]
name = "UnlimitedEngraves"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = {git = "https://github.com/ultimate-research/skyline-rs", rev = "ba4706a6faa1a705b37cc962826b0426d72bf604"}
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk", rev = "c83d92a930852db6028442dbba930aa14012172c"}
unity = { version="0.3.0", git = "https://github.com/DivineDragonFanClub/unity" }
engage = { version="0.6.1", git = "https://github.com/DivineDragonFanClub/engage"}
cobapi = { version = "0.3.0", git = "https://github.com/DivineDragonFanClub/cobapi" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
num = "0.4.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
